--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>My GitHub Pages Site for feature 2</title>
+    <title>This is the commit from the local</title>
   </head>
   <body>
     <h1>Hello world!</h1>
