this is the last fix

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p>Welcome to my GitHub Pages site!</p>
     <p> Rebase test</p>
     <p> feayyre 2  test</p>
+    <p> This is for the "Commit some changes in the Hotfix branch and merge it into the Production as well as the Integration branch"</p>
     
   </body>
 </html>
